# poppingamer

./: '  .gdb_history  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: poppingamer.hpp
include/poppingamer/: application.hpp  poppingamer.hpp  spritelibrary.hpp
include/poppingamer/debug/: logger.hpp
include/poppingamer/ecs/: component.hpp  componentmanager.hpp  componentsystem.hpp  entity.hpp  objectpool.hpp  objectpooler.hpp  scene.hpp  transform.hpp  updatetypes.hpp
include/poppingamer/ecs_old/: component.hpp  componentmanager.hpp  objectpooler.hpp  scene.hpp  transform.hpp
include/poppingamer/renderer/: camera.hpp  renderable.hpp  renderer.hpp  sprite.hpp  spriterenderer.hpp
sandbox/: CMakeLists.txt  apptest.cpp  cm_test.cpp  main.cpp  notes.cpp  polymorphtest.cpp  test_cm.cpp  test_objectpool.cpp  test_rend.cpp  test_view.cpp
src/: CMakeLists.txt  pgpch.hpp  poppingamer.cpp  spritelibrary.cpp
src/debug/: logger.cpp
src/ecs/: componentmanager.cpp  entity.cpp  objectpooler.cpp  scene.cpp
src/renderer/: camera.cpp  renderer.cpp  spriterenderer.cpp
